v5.0.0 API changes and features (#776)
V5.0.0 changes.

This includes an overhaul of the project to target Java 17 as a minimum
version, which will allow support of AssertJ V4.0 once it is released,
and allow the potential for ECJ support to be provided.

---------

Signed-off-by: Ashley <73482956+ascopes@users.noreply.github.com>